@@ -1,3 +1,7 @@
+2003/12/31 02:03 (-0500) muppetman
+
+	* GValue.xs: paranoia -- check for sv==NULL before passing to SvOK.
+
 2003/12/30 11:49 (-0500) rwmcfa1
 
 	* GenPod.pm, MakeHelper.pm, Subclass.pm: added version numbers
